# hakobiya

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml.example
.github/workflows/: codecov.yml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240605_041108_join_event_new_cols_inviteadmin_and_notes.rs
migrations/: 20240601073129_initial-tables.sql
src/: db.rs  main.rs
src/auth/: google.rs
src/entities/: event.rs  hold_event.rs  join_event.rs  join_sub_event.rs  mod.rs  prelude.rs  sub_event.rs  user.rs
src/pages/: events.rs  mod.rs  subevents.rs
static/: 404.html  base.html.tera  index.html.tera  login-required.html  qr.css  qr.html  qrCodeScanner.js
templates/: base.html.tera  events-create.html.tera  events-get.html.tera  events-join.html.tera  events.html.tera  index.html.tera  login-required.html.tera  subevent.html.tera  subevt-create.html.tera  subevt-user.html.tera
