[package]
name = "hakobiya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
image = "0.25.1"
lazy_static = "1.4.0"
qrcode = "0.14.0"
reqwest = { version = "0.12.4", features = ["json"] }
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
rocket_oauth2 = "0.5.0"
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
