[package]
name = "hakobiya"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
image = { version = "0.25.1", default-features = false }
once_cell = "1.19.0"
qrcode = "0.14.0"
reqwest = { version = "0.12.4", features = ["json"] }
rocket = { version = "0.5.1", default-features = false }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_oauth2 = "0.5.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
sea-orm-migration = "0.12.15"
serde = { version = "1.0.203", default-features = false }
serde_json = { version = "1.0.117", default-features = false }
sqlx = { version = "0.7.4", default-features = false, features = ["macros", "migrate"] }
tracing = "0.1.40"
tracing-logfmt = "0.3.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
migration = { path = "migration/" }
